# pruebaLinktic

./: .gitignore  README.md  docker-compose.yml  peticiones.json.txt
inventory/: .coverage  .env  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  test_inventory.db
inventory/alembic/: env.py
inventory/app/: main.py
inventory/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_19afe7629c44259c_product_client_py.html  z_2dd8bbcc83a1ab31_inventory_py.html  z_4a9cca768ff3c21b_deps_py.html  z_4c37ce8615b5aa70_inventory_service_py.html  z_5f5a17c013354698_main_py.html  z_adebc8a9b0574ea2_config_py.html  z_adebc8a9b0574ea2_db_py.html  (+3 more)
products/: .coverage  .env  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  test_products.db
products/alembic/: env.py
products/app/: main.py
products/app/api/routers/: product.py
products/app/core/: config.py  db.py
products/app/domain/models/: product.py
products/app/domain/schemas/: product.py
products/app/repository/: product_repository.py
products/app/services/: product_service.py
products/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_4a9cca768ff3c21b_deps_py.html  z_4c37ce8615b5aa70_product_service_py.html  z_5f5a17c013354698_main_py.html  z_adebc8a9b0574ea2_config_py.html  z_adebc8a9b0574ea2_db_py.html  z_b3bfbde47165d476_product_repository_py.html  z_c3e42f7d170eaabd_product_py.html  z_ddd69ab71952e384_product_py.html  z_e0cc2f2dcef055d9_product_py.html
products/test/: conftest.py  test_create.py  test_get.py
(+15 files in other folders)
